Improve validation messages, improve success message, make fields required again

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,8 +1,8 @@
 pt-BR:
   errors:
     messages:
-      blank: não pode ficar em branco
-      taken: já está em uso
+      blank: não pode ficar em branco.
+      taken: já está cadastrado.
   activerecord:
     attributes:
       member:
